feat: add pagination and sorting for hotels
- Updated HotelService to return Page<HotelResponseDTO> for getAllHotels with Pageable support.
- Updated HotelController to accept Pageable parameters for GET /hotels endpoint.
- Added @PageableDefault to set default page size and sort field.
- Updated unit tests to cover pagination and sorting functionality.
- Ensured mapping from Page<Hotel> to Page<HotelResponseDTO> using HotelMapper.